@@ -1,3 +1,7 @@
+2007-10-24 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/all_relations.py: collapse parents same family in one line
+	* src/Relationship.py: change no parent family code
+
 2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/Relationship.py: internationalization of a string
 
